bad/mul_invalid_types_string_class.example_compiler_output
ERROR
[1mbad/mul_invalid_types_string_class.lat:6:9: [1;31merror: [0;1mmultiplication is defined only for int values, not `string` and `X`[m
	"test" * x;
	       [1;32m^[m
